<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/download"
            android:drawableStart="@drawable/ic_file_download_white_24dp"
            android:drawablePadding="16dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/sign_up"
            android:drawableStart="@drawable/ic_person_add_white_24dp"
            android:drawablePadding="16dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/soundscape"
            android:drawableStart="@drawable/ic_volume_up_white_24dp"
            android:drawablePadding="16dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/collaborative"
            android:drawableStart="@drawable/ic_group_white_24dp"
            android:drawablePadding="16dp" />
    </LinearLayout>
</ScrollView>