<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_layout"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:layout_margin="48dp">
    <ImageView
        android:id="@+id/icon"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="48dp"
        android:src="@drawable/ab_logo"
        android:contentDescription="@string/app_name" />
    <EditText
        android:id="@+id/name_field"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="12dp"
        android:padding="16dp"
        android:textSize="@dimen/text_small"
        android:textColor="#555555"
        android:hint="@string/enter_your_name"
        android:textColorHint="@android:color/darker_gray"
        android:background="@color/text"
        android:inputType="textPersonName|textCapWords" />
    <Button
        android:id="@+id/join_button"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:background="@drawable/login_button"
        android:textSize="@dimen/text_small"
        android:textAllCaps="false"
        android:text="@string/join"
        android:onClick="login"/>
    <LinearLayout
        android:id="@+id/or_holder"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="48dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center">
        <View
            android:id="@+id/left_line"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/dark_text" />
        <TextView
            android:id="@+id/or_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:textSize="@dimen/text_small"
            android:text="@string/or"
            android:color="@color/dark_text" />
        <View
            android:id="@+id/right_line"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/dark_text" />
    </LinearLayout>
    <com.facebook.login.widget.LoginButton
        android:id="@+id/facebook_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" />
</LinearLayout>
